--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/AlexKomanov/typescript-course-purpleschool/issues"
   },
-  "homepage": "https://github.com/AlexKomanov/typescript-course-purpleschool#readme"
+  "homepage": "https://github.com/AlexKomanov/typescript-course-purpleschool#readme",
+  "dependencies": {
+    "axios": "^1.3.5"
+  }
 }
